--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
@@ -37,6 +38,12 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "react-router-dom": "^7.0.2"
+    "autoprefixer": "^10.4.20",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
+    "react-router-dom": "^7.0.2",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
