--- a/package.json
+++ b/package.json
@@ -3,15 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.2.3",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/lab": "^6.0.0-beta.21",
+    "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "flowbite": "^2.5.2",
+    "mdb-react-ui-kit": "^9.0.0",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -38,12 +53,9 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
-    "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "react-router-dom": "^7.0.2",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17"
+    "style-loader": "^4.0.0"
   }
 }
